tests/broken/writ-without-expression.stderr
error: Expected an expression.
 --> tests/broken/writ-without-expression.rs:4:18
  |
4 | #[oxiplate = "{{ ` }}"]
  |                  ^^^^
